--- a/www/.storybook/storybook.css
+++ b/www/.storybook/storybook.css
@@ -2,8 +2,7 @@ html,
 .sb-show-main,
 body.sb-show-main.sb-show-padded,
 #storybook-root,
-#storybook-root > div,
-#storybook-root > div > div {
+#storybook-root > div {
   padding: 0 !important;
   height: 100%;
 }
