--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -167,7 +167,8 @@ svg {
  * General theme styles
  */
 
-.theme-white {
+.theme-white,
+.theme-wrapper .theme-white {
   .bg-theme {
     background: theme('colors.white');
   }
@@ -197,196 +198,7 @@ svg {
       fill: theme('colors.yellow-dark');
     }
   }
-}
-.theme-grey {
-  .bg-theme {
-    background: theme('colors.grey');
-  }
 
-  .text-theme-primary {
-    color: theme('colors.black');
-  }
-
-  .text-theme-secondary {
-    color: theme('colors.grey-darker');
-  }
-
-  .text-theme-decorative {
-    color: theme('colors.sienna');
-  }
-
-  .border-theme {
-    border-color: theme('colors.grey-dark');
-  }
-
-  svg {
-    .icon-base {
-      fill: theme('colors.yellow');
-    }
-
-    .icon-overlap {
-      fill: theme('colors.yellow-dark');
-    }
-  }
-}
-
-.theme-sienna {
-  .bg-theme {
-    background: theme('colors.sienna');
-  }
-
-  .text-theme-primary {
-    color: theme('colors.yellow-light');
-  }
-
-  .text-theme-secondary {
-    @apply text-yellow-light/70;
-  }
-
-  .text-theme-decorative {
-    color: theme('colors.yellow');
-  }
-
-  .border-theme {
-    border-color: theme('colors.black');
-  }
-
-  svg {
-    .icon-base {
-      fill: theme('colors.sienna-light');
-    }
-
-    .icon-overlap {
-      fill: theme('colors.sienna-lightest');
-    }
-  }
-}
-
-.theme-midnight {
-  .bg-theme {
-    background: theme('colors.midnight');
-  }
-
-  .text-theme-primary {
-    color: theme('colors.yellow-light');
-  }
-
-  .text-theme-secondary {
-    @apply text-yellow-light/70;
-  }
-
-  .text-theme-decorative {
-    color: theme('colors.sky');
-  }
-
-  .border-theme {
-    border-color: theme('colors.grey-darker');
-  }
-
-  svg {
-    .icon-base {
-      fill: theme('colors.sky-medium');
-    }
-
-    .icon-overlap {
-      fill: theme('colors.sky');
-    }
-  }
-}
-
-.theme-sky {
-  .bg-theme {
-    background: theme('colors.sky');
-  }
-
-  .text-theme-primary {
-    color: theme('colors.black');
-  }
-
-  .text-theme-secondary {
-    @apply text-black/70;
-  }
-
-  .text-theme-decorative {
-    color: theme('colors.midnight');
-  }
-
-  .border-theme {
-    @apply border-white/40;
-  }
-
-  svg {
-    .icon-base {
-      fill: theme('colors.sky-medium');
-    }
-
-    .icon-overlap {
-      fill: theme('colors.sky-dark');
-    }
-  }
-}
-
-/**
- * CTA Styles
- */
-
-.cta {
-  @apply font-size-8;
-  border-radius: 48px;
-  cursor: pointer;
-  height: 40px;
-
-  &__inner {
-    display: flex;
-    align-items: center;
-    height: 100%;
-    padding: 0 3.5rem;
-
-    @screen md {
-      padding: 0 2.5rem;
-    }
-  }
-
-  @screen md {
-    height: 48px;
-  }
-
-  &:disabled {
-    pointer-events: none;
-  }
-
-  &--textLink {
-    height: 26px;
-
-    @screen md {
-      height: 24px;
-    }
-
-    .cta__inner {
-      padding: 0;
-    }
-  }
-}
-
-/*
- * Themed CTA styles
- */
-
-.theme-wrapper {
-  .cta {
-    &:focus {
-      outline: none;
-    }
-
-    &--outlined {
-      &:focus {
-        border-width: 4px;
-      }
-    }
-  }
-}
-
-.theme-white {
   .cta--primary {
     color: theme('colors.black');
     background-color: theme('colors.yellow');
@@ -470,7 +282,38 @@ svg {
   }
 }
 
-.theme-grey {
+.theme-grey,
+.theme-wrapper .theme-grey {
+  .bg-theme {
+    background: theme('colors.grey');
+  }
+
+  .text-theme-primary {
+    color: theme('colors.black');
+  }
+
+  .text-theme-secondary {
+    color: theme('colors.grey-darker');
+  }
+
+  .text-theme-decorative {
+    color: theme('colors.sienna');
+  }
+
+  .border-theme {
+    border-color: theme('colors.grey-dark');
+  }
+
+  svg {
+    .icon-base {
+      fill: theme('colors.yellow');
+    }
+
+    .icon-overlap {
+      fill: theme('colors.yellow-dark');
+    }
+  }
+
   .cta--secondary {
     color: theme('colors.midnight');
     background-color: theme('colors.grey-medium');
@@ -529,7 +372,38 @@ svg {
   }
 }
 
-.theme-sienna {
+.theme-sienna,
+.theme-wrapper .theme-sienna {
+  .bg-theme {
+    background: theme('colors.sienna');
+  }
+
+  .text-theme-primary {
+    color: theme('colors.yellow-light');
+  }
+
+  .text-theme-secondary {
+    @apply text-yellow-light/70;
+  }
+
+  .text-theme-decorative {
+    color: theme('colors.yellow');
+  }
+
+  .border-theme {
+    border-color: theme('colors.black');
+  }
+
+  svg {
+    .icon-base {
+      fill: theme('colors.sienna-light');
+    }
+
+    .icon-overlap {
+      fill: theme('colors.sienna-lightest');
+    }
+  }
+
   .cta--primary {
     &:disabled {
       opacity: 30%;
@@ -592,7 +466,38 @@ svg {
   }
 }
 
-.theme-midnight {
+.theme-midnight,
+.theme-wrapper .theme-midnight {
+  .bg-theme {
+    background: theme('colors.midnight');
+  }
+
+  .text-theme-primary {
+    color: theme('colors.yellow-light');
+  }
+
+  .text-theme-secondary {
+    @apply text-yellow-light/70;
+  }
+
+  .text-theme-decorative {
+    color: theme('colors.sky');
+  }
+
+  .border-theme {
+    border-color: theme('colors.grey-darker');
+  }
+
+  svg {
+    .icon-base {
+      fill: theme('colors.sky-medium');
+    }
+
+    .icon-overlap {
+      fill: theme('colors.sky');
+    }
+  }
+
   .cta--primary {
     &:disabled {
       opacity: 30%;
@@ -664,7 +569,38 @@ svg {
   }
 }
 
-.theme-sky {
+.theme-sky,
+.theme-wrapper .theme-sky {
+  .bg-theme {
+    background: theme('colors.sky');
+  }
+
+  .text-theme-primary {
+    color: theme('colors.black');
+  }
+
+  .text-theme-secondary {
+    @apply text-black/70;
+  }
+
+  .text-theme-decorative {
+    color: theme('colors.midnight');
+  }
+
+  .border-theme {
+    @apply border-white/40;
+  }
+
+  svg {
+    .icon-base {
+      fill: theme('colors.sky-medium');
+    }
+
+    .icon-overlap {
+      fill: theme('colors.sky-dark');
+    }
+  }
+
   .cta--secondary {
     color: theme('colors.black');
     background-color: theme('colors.sky-light');
@@ -692,5 +628,65 @@ svg {
 
   .cta--textLink {
     /* TODO: Pending designs */
+  }
+}
+
+/**
+ * CTA Styles
+ */
+
+.cta {
+  @apply font-size-8;
+  border-radius: 48px;
+  cursor: pointer;
+  height: 40px;
+
+  &__inner {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    padding: 0 3.5rem;
+
+    @screen md {
+      padding: 0 2.5rem;
+    }
+  }
+
+  @screen md {
+    height: 48px;
+  }
+
+  &:disabled {
+    pointer-events: none;
+  }
+
+  &--textLink {
+    height: 26px;
+
+    @screen md {
+      height: 24px;
+    }
+
+    .cta__inner {
+      padding: 0;
+    }
+  }
+}
+
+/*
+ * Common CTA styles
+ */
+
+.theme-wrapper {
+  .cta {
+    &:focus {
+      outline: none;
+    }
+
+    &--outlined {
+      &:focus {
+        border-width: 4px;
+      }
+    }
   }
 }
