feat: render Link annotation in RichText

--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -54,6 +54,8 @@ img {
   }
 }
 
+.Rich
+
 /*
  * Reference:
  * https://www.figma.com/file/2ghg22zsQKeysX5YUcDP5d/%5BFirefly%5D-Design-System?type=design&node-id=3801%3A6956&mode=dev
