--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -331,6 +331,8 @@ svg {
   border-radius: 48px;
   cursor: pointer;
   height: 40px;
+  text-align: center;
+  white-space: nowrap;
   color: var(--cta-text-color-primary);
   background-color: var(--cta-bg-color-primary);
   border: 3px solid transparent;
@@ -343,10 +345,10 @@ svg {
     align-items: center;
     justify-content: center;
     height: 100%;
-    padding: 0 3.5rem;
+    padding: 0 2.5rem;
 
     @screen md {
-      padding: 0 2.5rem;
+      padding: 0 3rem;
     }
   }
 
