feat: hide caption from poster images within video component

--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -73,6 +73,11 @@ img {
   height: 100% !important;
 }
 
+/* Hides caption from posterImage within video component */
+#video-component #video-poster-image figcaption {
+  display: none;
+}
+
 /*
  * Reference:
  * https://www.figma.com/file/2ghg22zsQKeysX5YUcDP5d/%5BFirefly%5D-Design-System?type=design&node-id=3801%3A6956&mode=dev
