--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -10,3 +10,25 @@
     left: 0;
   }
 }
+
+.PractitionerCard {
+  &__headshot {
+    position: relative;
+
+    a:focus,
+    a:hover {
+      .PractitionerCard__blurb {
+        display: block;
+      }
+    }
+  }
+
+  &__blurb {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
