--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -6,23 +6,6 @@
   --bar-graph-width: 0px;
 }
 
-.text-theme-primary,
-.text-theme-secondary,
-.text-theme-decorative,
-.cta-text-theme-primary,
-.cta-text-theme-secondary {
-  color: inherit;
-}
-
-.cta-bg-theme-primary,
-.cta-bg-theme-secondary {
-  background-color: inherit;
-}
-
-.border-theme {
-  border-color: inherit;
-}
-
 svg {
   .icon-base,
   .icon-overlap {
@@ -313,6 +296,9 @@ img {
 .theme-bg-color {
   background-color: var(--bg-color);
 }
+.theme-border-color {
+  border-color: var(--border-color);
+}
 .theme-text-color-primary {
   color: var(--text-color-primary);
 }
@@ -325,17 +311,23 @@ img {
 .theme-border-color {
   border-color: var(--border-color);
 }
-.theme-cta-text-color-primary {
-  color: var(--cta-text-color-primary);
-}
 .theme-bg-color-primary {
   background-color: var(--cta-bg-color-primary);
+}
+.theme-bg-color-secondary {
+  color: var(--cta-bg-color-secondary);
+}
+.theme-cta-text-color-primary {
+  color: var(--cta-text-color-primary);
 }
 .theme-cta-text-color-secondary {
   color: var(--cta-text-color-secondary);
 }
-.theme-bg-color-secondary {
-  color: var(--cta-bg-color-secondary);
+.theme-cta-bg-color-primary {
+  background-color: var(--cta-bg-color-primary);
+}
+.theme-cta-bg-color-secondary {
+  background-color: var(--cta-bg-color-secondary);
 }
 
 svg {
