style: hide practitioner blurb focus for mobile

--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -15,10 +15,12 @@
   &__headshot {
     position: relative;
 
-    a:focus,
-    a:hover {
-      .PractitionerCard__blurb {
-        display: block;
+    @media screen(md) {
+      a:focus,
+      a:hover {
+        .PractitionerCard__blurb {
+          display: block;
+        }
       }
     }
   }
