feat: add sequence pathways

--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -11,6 +11,10 @@ svg {
   .icon-overlap {
     fill: currentColor;
   }
+  .icon-base-stroke,
+  .icon-overlap-stroke {
+    stroke: currentColor;
+  }
 }
 
 button:disabled,
