feat: add initial DrawerListBlock and items

--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -419,7 +419,7 @@ svg {
   }
 
   &--textLink {
-    background-color: var(--bg-color);
+    background-color: transparent;
     color: var(--text-color-primary);
     border-color: var(--text-color-primary);
     border-width: 0;
