--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -15,7 +15,7 @@
   &__headshot {
     position: relative;
 
-    @media screen(md) {
+    @screen md {
       a:focus,
       a:hover {
         .PractitionerCard__blurb {
@@ -33,4 +33,32 @@
     width: 100%;
     height: 100%;
   }
+}
+
+/* style cta */
+.image-text-overlap-block a {
+  border-bottom: none;
+}
+
+/* style unordered list and list elements */
+.image-text-overlap-block ul {
+  display: grid;
+  grid-template-rows: repeat(1, minmax(0, 1fr));
+  margin-top: 52px;
+
+  li {
+    border-top: 1px solid var(--border-color);
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  @screen md {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    column-gap: 30px;
+  }
+}
+
+/* style bullet of list style */
+.image-text-overlap-block ul li::before {
+  top: calc(1.5em);
 }
