--- a/www/src/styles/richText.css
+++ b/www/src/styles/richText.css
@@ -43,4 +43,13 @@
   .cta__inner a {
     border-bottom: none;
   }
+
+  .TwoColumnUnorderedList {
+    margin-top: 52px;
+  }
+
+  /* style bullet of list style */
+  .TwoColumnUnorderedList li::before {
+    top: calc(20px + 0.375em);
+  }
 }
