--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -35,47 +35,110 @@
   }
 }
 
-.TwoUpBlock {
-  &__wrapper {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-gap: 3rem;
-  }
-
-  &__child {
-    grid-column: span 6;
-  }
-}
-
+.TwoUpBlock--layout-normal-50-50,
+.TwoUpBlock--layout-normal-40-60,
 .TwoUpBlock--layout-normal-60-40 {
-  .TwoUpBlock__child:nth-child(1) {
-    grid-column: span 5;
+  display: flex;
+  flex-direction: column;
+
+  .TwoUpBlock__child {
+    &:nth-child(2) {
+      padding-top: 32px;
+
+      @screen md {
+        padding-top: 52px;
+      }
+
+      @screen lg {
+        padding-top: initial;
+      }
+    }
   }
 
-  .TwoUpBlock__child:nth-child(2) {
-    grid-column: span 7;
+  @screen lg {
+    &.TwoUpBlock__wrapper {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      grid-gap: 3rem;
+    }
+
+    .TwoUpBlock__child {
+      grid-column: span 6;
+    }
   }
 }
 
 .TwoUpBlock--layout-normal-40-60 {
-  .TwoUpBlock__child:nth-child(1) {
-    grid-column: span 7;
-  }
+  @screen lg {
+    .TwoUpBlock__child:nth-child(1) {
+      grid-column: span 5;
+    }
 
-  .TwoUpBlock__child:nth-child(2) {
-    grid-column: span 5;
+    .TwoUpBlock__child:nth-child(2) {
+      grid-column: span 7;
+    }
+  }
+}
+
+.TwoUpBlock--layout-normal-60-40 {
+  @screen lg {
+    .TwoUpBlock__child:nth-child(1) {
+      grid-column: span 7;
+    }
+
+    .TwoUpBlock__child:nth-child(2) {
+      grid-column: span 5;
+    }
   }
 }
 
 .TwoUpBlock--layout-overlap-50-50 {
   display: flex;
-  flex-direction: flex-row;
+  flex-direction: column;
+
+  @screen lg {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  &.TwoUpBlock__wrapper {
+    grid-gap: 0;
+  }
 
   .TwoUpBlock__child {
-    width: calc(50% + 3rem);
+    max-width: 630px;
+    margin: 0 auto;
+
+    @screen lg {
+      max-width: initial;
+      width: calc(50% + 3rem);
+      flex-grow: 1;
+    }
 
     &:nth-child(2) {
-      margin-left: -6rem;
+      margin-top: -24px;
+      max-width: calc(630px - 48px);
+      width: calc(100% - 24px);
+      mix-blend-mode: multiply;
+
+      @screen md {
+        margin-top: -48px;
+      }
+
+      @screen lg {
+        width: calc(50% + 3rem);
+        max-width: initial;
+        margin-top: 0;
+        margin-left: -48px;
+      }
+    }
+
+    &--imageChildBlock {
+      width: 100%;
+      max-width: initial;
+      @screen lg {
+        width: calc(50% + 3rem);
+      }
     }
   }
 }
