--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -41,8 +41,24 @@
   display: flex;
   flex-direction: column;
 
-  .TwoUpBlock__child {
-    &:nth-child(2) {
+  &.TwoUpBlock--mobileNormal {
+    .TwoUpBlock__child:nth-child(2) {
+      padding-top: 32px;
+
+      @screen md {
+        padding-top: 52px;
+      }
+
+      @screen lg {
+        padding-top: initial;
+      }
+    }
+  }
+
+  &.TwoUpBlock--mobileReverse {
+    flex-direction: column-reverse;
+
+    .TwoUpBlock__child:nth-child(1) {
       padding-top: 32px;
 
       @screen md {
@@ -56,11 +72,9 @@
   }
 
   @screen lg {
-    &.TwoUpBlock__wrapper {
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      grid-gap: 3rem;
-    }
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 3rem;
 
     .TwoUpBlock__child {
       grid-column: span 6;
@@ -96,13 +110,13 @@
   display: flex;
   flex-direction: column;
 
+  &.TwoupBlock--mobileReverse {
+    flex-direction: column-reverse;
+  }
+
   @screen lg {
     flex-direction: row;
     align-items: center;
-  }
-
-  &.TwoUpBlock__wrapper {
-    grid-gap: 0;
   }
 
   .TwoUpBlock__child {
