--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -34,3 +34,21 @@
     height: 100%;
   }
 }
+
+.Subnav {
+  &__item {
+    .Subnav__item-circle {
+      transition: width 200ms;
+      width: 0px;
+      height: 0px;
+      max-width: 13px;
+      max-height: 13px;
+    }
+    &:hover {
+      .Subnav__item-circle {
+        width: 13px;
+        height: 13px;
+      }
+    }
+  }
+}
