feat: add FAQ block

--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -338,6 +338,10 @@ img {
   background-color: var(--cta-bg-color-secondary);
 }
 
+.theme-icon-overlap {
+  color: var(--icon-overlap);
+}
+
 svg {
   .icon-base {
     fill: var(--icon-base);
