--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -38,7 +38,7 @@
 .Subnav {
   &__item {
     .Subnav__item-circle {
-      transition: width 200ms;
+      transition: all 200ms;
       width: 0px;
       height: 0px;
       max-width: 13px;
